--- a/stackinterp.cabal
+++ b/stackinterp.cabal
@@ -25,10 +25,10 @@ executable stackinterp
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: ByteCodeInterp, ByteCode
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.12.0.0
-    hs-source-dirs:   app
+    hs-source-dirs:   app, src
     default-language: Haskell2010
