--- a/stackinterp.cabal
+++ b/stackinterp.cabal
@@ -29,6 +29,8 @@ executable stackinterp
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.12.0.0
-    hs-source-dirs:   app, src
+    build-depends:    base ^>=4.12.0.0,
+                      scotty,
+                      http-types
+    hs-source-dirs:   server, src
     default-language: Haskell2010
